--- a/src/app/shared/template/side-nav/component/side-nav.component.scss
+++ b/src/app/shared/template/side-nav/component/side-nav.component.scss
@@ -9,30 +9,33 @@
   overflow-x: hidden;
   transition: 0.5s;
   /*padding-top: 60px;*/
+
+  a {
+    padding: 8px 8px 8px 10px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+
+  a:hover {
+    color: #f1f1f1;
+  }
+
+  .closebtn {
+    /*position: absolute*/;
+    padding: 0 8px 8px 10px;
+    top: 2px;
+    font-size: 36px;
+    margin-bottom: 5px;
+    cursor: pointer;
+
+  }
 }
 
-.sidenav a {
-  padding: 8px 8px 8px 10px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
 
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  /*position: absolute*/;
-  padding: 0 8px 8px 10px;
-  top: 2px;
-  font-size: 36px;
-  margin-bottom: 5px;
-  cursor: pointer;
-
-}
 
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
