--- a/src/app/shared/comment/comment.component.scss
+++ b/src/app/shared/comment/comment.component.scss
@@ -1,17 +1,15 @@
-.comment-image img{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
 .comment-image{
   width:65px;
+  float:left;
+  img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
 }
 
-.comment-image,.comment-body{
-  float:left;
-}
 .comment-body{
+  float:left;
   width:80%;
   padding-top: 10px;
 }
@@ -37,6 +35,7 @@ p{
   cursor: pointer;
   padding-left: 10px;
 }
+
 .date-field{
   padding-top: 10px;
 }
