--- a/src/app/shared/template/toolbar/toolbar.component.scss
+++ b/src/app/shared/template/toolbar/toolbar.component.scss
@@ -1,27 +1,27 @@
 .topnav {
   overflow: hidden;
   background-color: #333;
-}
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 10px;
-  text-decoration: none;
-  font-size: 17px;
-  cursor: pointer;
-}
+  a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 10px;
+    text-decoration: none;
+    font-size: 17px;
+    cursor: pointer;
+  }
 
-.topnav span{
-  float: left;
-  padding: 14px 10px;
-  color: #f2f2f2;
-  text-align: center;
-  font-size: 17px;
-}
+  span{
+    float: left;
+    padding: 14px 10px;
+    color: #f2f2f2;
+    text-align: center;
+    font-size: 17px;
+  }
 
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+  a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
 }
