--- a/src/app/features/detail-album/component/detail-album.component.html
+++ b/src/app/features/detail-album/component/detail-album.component.html
@@ -2,6 +2,17 @@
   {{ albumModel?.title }}
 </h1>
 
+<div class="flexContainer">
+  <div *ngFor="let photo of listPhotos">
+    <app-photo-card
+      [photo]="photo"
+      [userId]="photo.album.userId"
+    ></app-photo-card>
+  </div>
+</div>
+
+<!--VERSIONE NO FLEXBOX-->
+<!--
 <div class="row">
   <div class="column" *ngFor="let photo of listPhotos">
     <app-photo-card
@@ -10,3 +21,4 @@
     ></app-photo-card>
   </div>
 </div>
+-->
