--- a/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
+++ b/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
@@ -55,15 +55,15 @@ img {
 }
 
 .modal-column {
-  flex: 50%;
+  width: 50%;
   padding:10px 35px 0 35px;
 }
 
-.img-gradient {
+/*.img-gradient {
   position: relative;
   width: 650px;
   height: 150px;
-}
+}*/
 
 .avatar {
   vertical-align: middle;
