--- a/src/app/shared/photo-card/component/photo-card.component.scss
+++ b/src/app/shared/photo-card/component/photo-card.component.scss
@@ -4,6 +4,7 @@
   height: 260px;
   background-color: #f1f1f1;
   border-radius: 5px;
+  width: 300px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -28,7 +29,6 @@ img {
 
 .text-container{
   padding-left: 5px;
-
 }
 
 .img-gradient {
