--- a/src/app/features/home/components/home.component.html
+++ b/src/app/features/home/components/home.component.html
@@ -1,3 +1,5 @@
+<app-content-loader [displayProgressSpinner]="isLoadingData"></app-content-loader>
+
 <div class="flexContainer">
   <div *ngFor="let photo of listPhotos">
     <app-photo-card
