--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,26 @@
 <app-side-nav #nav [listAlbums]="listAlbums" *ngIf="!!(userService.getInfoObs()| async)?.id"></app-side-nav>
 
 -->
-<app-toolbar (toggleEvent)="openNav()" ></app-toolbar >
+<!--<app-toolbar (toggleEvent)="openNav()" ></app-toolbar >-->
 
-<app-side-nav #nav [listAlbums]="listAlbums" ></app-side-nav>
+<!--<app-side-nav #nav [listAlbums]="listAlbums" ></app-side-nav>-->
+<app-header [inputSideNav]="sideNav" *ngIf="!!(userService.getInfoObs()| async)?.id"></app-header>
 
+<mat-sidenav-container class="container-top" [hasBackdrop]="true">
+  <mat-sidenav #sideNav (click)="sideNav.toggle()" mode="over">
+    <mat-nav-list>
 
-<router-outlet></router-outlet>
+      <a
+        mat-list-item
+
+        routerLink="/detail-album/{{ album.id }}"
+        *ngFor="let album of listAlbums"
+      >{{ album.title }}</a
+      >
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet> </router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
