--- a/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.html
+++ b/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.html
@@ -28,7 +28,7 @@
       </div>
       <span style="padding-right: 35px; padding-bottom: 10px; float:right">Please insert a comment here</span>
       <div class="comment-area">
-        <textarea formControlName="comment" maxlength="140"></textarea>
+        <textarea matInput formControlName="comment" maxlength="140"></textarea>
         {{ modalForm.controls["comment"].value.length }}/140
         <div style="display: flex; justify-content: right">
           <button
