--- a/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
+++ b/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
@@ -7,6 +7,7 @@
   padding-bottom: 10px;
   left: 0;
   top: 0;
+
   width: 100%; /* Full width */
   height: 98%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
@@ -37,13 +38,13 @@
   cursor: pointer;
 }
 
-.card {
+/*.card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   height: 457px;
   width:762px;
   background-color: #f1f1f1;
   border-radius: 10px;
-}
+}*/
 
 img {
   border-radius: 10px 10px 0 0;
@@ -103,6 +104,7 @@ textarea {
 
 .section-comment{
   padding-left: 35px;
+  padding-bottom: 35px;
 }
 
 
@@ -113,5 +115,6 @@ hr.solid {
 .comment-area{
   text-align: center;
   padding-left: 35px;
-  padding-right: 35px
+  padding-right: 35px;
+  padding-bottom: 35px;
 }
