--- a/src/app/shared/photo-card/component/photo-card.component.scss
+++ b/src/app/shared/photo-card/component/photo-card.component.scss
@@ -21,11 +21,11 @@
   }
 }
 
-img {
+/*img {
   border-radius: 5px 5px 0 0;
   width: 100%;
   height: 100%;
-}
+}*/
 
 .text-container{
   padding-left: 5px;
@@ -78,3 +78,13 @@ img {
   opacity: 1;
 }
 
+
+.example-card {
+  width: 276px;
+  height: 300px;
+}
+
+.example-header-image {
+  background-image: url('/assets/img/avatar-person.svg');
+  background-size: cover;
+}
