--- a/src/app/shared/comment/component/comment.component.scss
+++ b/src/app/shared/comment/component/comment.component.scss
@@ -14,28 +14,11 @@
   padding-top: 10px;
 }
 
-p{
-  padding:10px 10px 3px 10px;
-  margin-bottom: 0px;
-
+p {
+  padding: 10px;
 }
 
 .comment-text{
   border-radius: 0 10px 10px 10px;
   background: lightgray;
-}
-
-.line-clamp {
-  height: 4rem;
-}
-
-.more {
-  font-size: 0.8rem;
-  color: dodgerblue;
-  cursor: pointer;
-  padding-left: 10px;
-}
-
-.date-field{
-  padding-top: 10px;
 }
