--- a/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
+++ b/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
@@ -1,4 +1,3 @@
-
 .modal {
   display: block; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -7,9 +6,8 @@
   padding-bottom: 10px;
   left: 0;
   top: 0;
-
   width: 100%; /* Full width */
-  height: 98%; /* Full height */
+  height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -28,7 +26,8 @@
   font-size: 25px;
   font-weight: bold;
   position: absolute;
-  right: 5px
+  right: 8px;
+  top: 4px;
 }
 
 .close:hover,
@@ -38,13 +37,6 @@
   cursor: pointer;
 }
 
-/*.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  height: 457px;
-  width:762px;
-  background-color: #f1f1f1;
-  border-radius: 10px;
-}*/
 
 img {
   border-radius: 10px 10px 0 0;
@@ -60,11 +52,6 @@ img {
   padding:10px 35px 0 35px;
 }
 
-/*.img-gradient {
-  position: relative;
-  width: 650px;
-  height: 150px;
-}*/
 
 .avatar {
   vertical-align: middle;
@@ -100,8 +87,6 @@ textarea {
   margin-top: 10px;
 }
 
-
-
 .section-comment{
   padding-left: 35px;
   padding-bottom: 35px;
@@ -117,4 +102,8 @@ hr.solid {
   padding-left: 35px;
   padding-right: 35px;
   padding-bottom: 35px;
+}
+
+.mat-input-element{
+  text-align: left;
 }
