--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,26 +23,19 @@ body.modal-open {
   flex-wrap: wrap;
   gap: 2rem;
   padding: 1rem;
-
 }
-
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
 
 .mat-sidenav{
   background-color: #EFF4FB;
   width: 250px;
 }
-/*.container-top {
-  top: 64px !important;
-}*/
 
 .liked{
   border: 2px solid red;
 }
+
+.mat-drawer-container {
+  background-color: white;
+}
+
+
