--- a/src/app/features/login-form/component/login-form.component.html
+++ b/src/app/features/login-form/component/login-form.component.html
@@ -1,3 +1,5 @@
+<app-content-loader [displayProgressSpinner]="isLoadingData"></app-content-loader>
+
 <div class="main">
   <div class="form">
     <p class="title">Login</p>
