--- a/src/app/features/detail-album/component/detail-album.component.html
+++ b/src/app/features/detail-album/component/detail-album.component.html
@@ -1,6 +1,6 @@
 <app-content-loader [displayProgressSpinner]="isLoadingData"></app-content-loader>
-<h1 style="padding-left: 30px; padding-top: 5px">
-  {{ albumModel?.title }}
+<h1 class="album-title">
+  Album {{ albumModel?.title }}
 </h1>
 
 <div class="flexContainer">
