--- a/src/app/features/login-form/component/login-form.component.html
+++ b/src/app/features/login-form/component/login-form.component.html
@@ -70,7 +70,7 @@
             </mat-icon>
           </button>
           <mat-error *ngIf="!loginForm.controls['password'].valid">
-            Inserisci Password
+            Enter Password
           </mat-error>
         </mat-form-field>
       </div>
@@ -81,7 +81,7 @@
           mat-stroked-button
           color="warn"
         >
-          Accedi
+          Log in
         </button>
       </div>
     </form>
