--- a/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
+++ b/src/app/shared/modal-detail-photo/component/modal-detail-photo.component.scss
@@ -107,3 +107,9 @@ hr.solid {
 .mat-input-element{
   text-align: left;
 }
+
+.comment-text{
+  padding-right: 35px;
+  padding-bottom: 10px;
+  float:right
+}
