--- a/src/app/shared/template/header/header.component.html
+++ b/src/app/shared/template/header/header.component.html
@@ -6,7 +6,7 @@
   <span class="example-spacer"></span>
 
   <div>
-    <span>Current logged user: {{(userService.getInfoObs()|async)?.name}}</span>
+    <span>Current user: {{(userService.getInfoObs()|async)?.name}}</span>
 
   </div>
 </mat-toolbar>
