--- a/src/app/shared/photo-card/component/photo-card.component.html
+++ b/src/app/shared/photo-card/component/photo-card.component.html
@@ -4,12 +4,13 @@
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{author?.name}}</mat-card-title>
-    <mat-card-subtitle>{{photo.album.title}}</mat-card-subtitle>
+    <mat-card-subtitle>{{album.title}}</mat-card-subtitle>
   </mat-card-header>
 
   <img mat-card-image [src]="photo.thumbnailUrl" alt="Photo of a Shiba Inu">
 
   <mat-card-content>
+    <strong>Photo {{photo.id}}</strong>
     <p style="height: 56px;">
       {{ photo.title }}
     </p>
